# rnidbg

./: .gitattributes  .gitignore  Cargo.toml  README.md
dynarmic/: CMakeLists.txt  Cargo.toml  LICENSE.txt  README.md
dynarmic/CMakeModules/: DetectArchitecture.cmake  FindBoost.cmake  FindUnicorn.cmake  TargetArchitectureSpecificSources.cmake  dynarmicConfig.cmake.in
dynarmic/CMakeModules/impl/: TargetArchitectureSpecificSourcesWrapFile.cmake
dynarmic/binding/: build.rs
dynarmic/binding/src/: ffi.rs  lib.rs
dynarmic/src/dynarmic/: CMakeLists.txt  dynarmic.cpp  dynarmic.h  mman.c  mman.h
dynarmic/src/dynarmic/backend/: block_range_information.cpp  block_range_information.h  exception_handler.h  exception_handler_generic.cpp  exception_handler_macos.cpp  exception_handler_macos_mig.c  exception_handler_posix.cpp  exception_handler_windows.cpp
dynarmic/src/dynarmic/backend/arm64/: a32_address_space.cpp  a32_address_space.h  a32_core.h  a32_interface.cpp  a32_jitstate.cpp  a32_jitstate.h  a64_address_space.cpp  a64_address_space.h  a64_core.h  a64_interface.cpp  a64_jitstate.h  abi.cpp  abi.h  address_space.cpp  address_space.h  devirtualize.h  emit_arm64.cpp  emit_arm64.h  emit_arm64_a32.cpp  emit_arm64_a32_coprocessor.cpp  emit_arm64_a32_memory.cpp  emit_arm64_a64.cpp  emit_arm64_a64_memory.cpp  emit_arm64_cryptography.cpp  emit_arm64_data_processing.cpp  emit_arm64_floating_point.cpp  emit_arm64_memory.cpp  emit_arm64_memory.h  emit_arm64_packed.cpp  emit_arm64_saturation.cpp  emit_arm64_vector.cpp  emit_arm64_vector_floating_point.cpp  emit_arm64_vector_saturation.cpp  emit_context.h  exclusive_monitor.cpp  fastmem.h  fpsr_manager.cpp  fpsr_manager.h  reg_alloc.cpp  reg_alloc.h  (+3 more)
dynarmic/src/dynarmic/backend/riscv64/: a32_address_space.cpp  a32_address_space.h  a32_core.h  a32_interface.cpp  a32_jitstate.cpp  a32_jitstate.h  abi.h  code_block.h  emit_context.h  emit_riscv64.cpp  emit_riscv64.h  emit_riscv64_a32.cpp  emit_riscv64_a32_coprocessor.cpp  emit_riscv64_a32_memory.cpp  emit_riscv64_a64.cpp  emit_riscv64_a64_memory.cpp  emit_riscv64_cryptography.cpp  emit_riscv64_data_processing.cpp  emit_riscv64_floating_point.cpp  emit_riscv64_packed.cpp  emit_riscv64_saturation.cpp  emit_riscv64_vector.cpp  emit_riscv64_vector_floating_point.cpp  emit_riscv64_vector_saturation.cpp  reg_alloc.cpp  reg_alloc.h  stack_layout.h
dynarmic/src/dynarmic/backend/x64/: a32_emit_x64.cpp  a32_emit_x64.h  a32_emit_x64_memory.cpp  a32_interface.cpp  a32_jitstate.cpp  a32_jitstate.h  a64_emit_x64.cpp  a64_emit_x64.h  a64_emit_x64_memory.cpp  a64_interface.cpp  a64_jitstate.cpp  a64_jitstate.h  abi.cpp  abi.h  block_of_code.cpp  block_of_code.h  callback.cpp  callback.h  constant_pool.cpp  constant_pool.h  constants.h  devirtualize.h  emit_x64.cpp  emit_x64.h  emit_x64_aes.cpp  emit_x64_crc32.cpp  emit_x64_data_processing.cpp  emit_x64_floating_point.cpp  emit_x64_memory.cpp.inc  emit_x64_memory.h  emit_x64_packed.cpp  emit_x64_saturation.cpp  emit_x64_sha.cpp  emit_x64_sm4.cpp  emit_x64_vector.cpp  emit_x64_vector_floating_point.cpp  emit_x64_vector_saturation.cpp  exception_handler_windows.cpp  exclusive_monitor.cpp  exclusive_monitor_friend.h  (+13 more)
dynarmic/src/dynarmic/common/: always_false.h  atomic.h  cast_util.h  llvm_disassemble.cpp  llvm_disassemble.h  lut_from_list.h  math_util.cpp  math_util.h  memory_pool.cpp  memory_pool.h  safe_ops.h  spin_lock.h  spin_lock_arm64.cpp  spin_lock_arm64.h  spin_lock_x64.cpp  spin_lock_x64.h  string_util.h  u128.cpp  u128.h  variant_util.h  x64_disassemble.cpp  x64_disassemble.h
dynarmic/src/dynarmic/common/crypto/: aes.cpp  aes.h  crc32.cpp  crc32.h  sm4.cpp  sm4.h
dynarmic/src/dynarmic/common/fp/: fpcr.h  fpsr.h  fused.cpp  fused.h  info.h  mantissa_util.h  op.h  process_exception.cpp  process_exception.h  process_nan.cpp  process_nan.h  rounding_mode.h  unpacked.cpp  unpacked.h  util.h
dynarmic/src/dynarmic/frontend/: imm.cpp  imm.h
dynarmic/src/dynarmic/frontend/A32/: FPSCR.h  ITState.h  PSR.h  a32_ir_emitter.cpp  a32_ir_emitter.h  a32_location_descriptor.cpp  a32_location_descriptor.h  a32_types.cpp  a32_types.h
dynarmic/src/dynarmic/interface/: exclusive_monitor.h  halt_reason.h  optimization_flags.h
dynarmic/src/dynarmic/ir/: acc_type.h  basic_block.cpp  basic_block.h  cond.h  ir_emitter.cpp  ir_emitter.h  location_descriptor.cpp  location_descriptor.h  microinstruction.cpp  microinstruction.h  opcodes.cpp  opcodes.h  opcodes.inc  terminal.h  type.cpp  type.h  value.cpp  value.h
emulator/: Cargo.toml
emulator/src/: lib.rs  pointer.rs
emulator/src/android/: jni.rs  mod.rs  structs.rs
emulator/src/android/dvm/: class.rs  class_resolver.rs  jni_env_ext.rs  member.rs  mod.rs  object.rs
emulator/src/android/virtual_library/: ld64.rs  lib_graphics.rs  mod.rs
emulator/src/backend/: backend_consts.rs  mod.rs
emulator/src/elf/: abi.rs  dynamic_struct.rs  hash_tab.rs  init_array.rs  memorized_object.rs  mod.rs  parser.rs  pt.rs  relocation.rs  section.rs  segment.rs  str_tab.rs  symbol.rs  symbol_structure.rs
emulator/src/emulator/: consts.rs  env_fixer.rs  mem_hook.rs  mod.rs  syscall_handler.rs
emulator/src/emulator/func/: fun_call.rs  mod.rs
emulator/src/emulator/memory/: mod.rs  tests.rs
emulator/src/emulator/signal/: mod.rs  signal_task.rs  unix_sig_set.rs
emulator/src/emulator/thread/: base_task.rs  covered_task.rs  function64.rs  linux_thread.rs  main_task.rs  mod.rs  task.rs  thread_dispatcher.rs  thread_task.rs  waiter.rs
emulator/src/emulator/trace/: mod.rs
emulator/src/keystone/: mod.rs
emulator/src/linux/: errno.rs  file_system.rs  init_fun.rs  mod.rs  module.rs  structs.rs  symbol.rs  syscalls.rs
emulator/src/linux/fs/: cpuinfo.rs  direction.rs  linux_file.rs  maps.rs  meminfo.rs  mod.rs  random_boot_id.rs  urandom.rs
emulator/src/linux/pipe/: mod.rs
emulator/src/linux/sock/: local_socket.rs  mod.rs
emulator/src/linux/thread/: mod.rs
emulator/src/memory/: library_file.rs  library_resolver.rs  mod.rs  svc_memory.rs
emulator/src/tool/: arm.rs  mod.rs
sparse_list/: Cargo.toml
(+203 files in other folders)
