[package]
name = "emulator"
authors = ["fuqiuluo"]
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[features]
default = []
unicorn_backend = ["unicorn-engine", "unicorn-engine/arch_aarch64", "big_address"]
dynarmic_backend = ["dynarmic"]
big_address = []

[dependencies]
unicorn-engine = { path = "../unicorn", version = "2.0.2", features = ["arch_aarch64"], optional = true, default-features = true }
dynarmic = { path = "../dynarmic", version = "0.1.0", optional = true }
sparse_list = { path = "../sparse_list", version = "0.1.0" }
capstone = "0.12.0"
anyhow = "1.0.86"
keystone-engine = { version = "0.1.0", features = ["build-from-src"] }
hex = { version = "0.4.3", features = ["default"] }
bytes = "1.6.0"
log = "0.4.22"
env_logger = "0.11.3"
hashbag = "0.1.12"
bitflags = "2.6.0"
indexmap = "2.3.0"
ansi_term = "0.12.1"
rand = "0.9.0-alpha.2"
chrono = { version = "0.4.38" }